Add scripts for API member management, Docker tasks, and DB operations
This commit adds multiple Bash scripts to manage API member operations, Docker login, publishing private images, and database connections. It also includes logic for handling .env configurations, multi-architecture Docker builds, and startup logging for troubleshooting and initialization verification.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ./:/app
     restart: always
+    command: ["bash", "/app/scripts/entrypoint.sh"]
     networks:
       - palliative-care-network
 
