Fix port configuration and database schema issues
• Update port configuration to avoid TLS terminator conflict
  - Change DEFAULT_PORT from 8081 to 5000 in .env
  - Update PORT from 8081 to 5000 in .env
  - Change RETELLAI_LOCAL_WEBHOOK_PORT to match
  - Update Dockerfile to use dynamic PORT environment variable
  - Modify entrypoint.sh to use PORT variable for Gunicorn

• Add database schema recreation functionality
  - Implement --recreate-db flag in push_to_quome.sh
  - Add RECREATE_SCHEMA environment variable support
  - Update database.py to handle schema recreation
  - Fix enum type mismatch between dev and production

• Update logging to use centralized logger
  - Replace basic logging with custom logger in db_seeder.py
  - Ensure consistent logging across application components

• Improve development workflow
  - Add uv package manager support in justfile
  - Update installation instructions in README.md
  - Add virtual environment activation checks
  - Update webhook configuration for local/remote environments

• Fix Docker configuration issues
  - Correct CMD instruction syntax error in Dockerfile
  - Add proper newline at end of Dockerfile
  - Update .gitignore to include .venv directory

• Update RetellAI configuration alignment
  - Rename RETELL_* variables to RETELLAI_* for consistency
  - Update webhook URL handling for dev/prod environments
  - Improve error handling in webhook update script

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,10 +25,13 @@ services:
       - CONTAINER_MODE=true
       - PORT=5000
       - DEV_STATE=TEST
-      - DATABASE_URL=${DATABASE_URL}
+      - DATABASE_URL=${DATABASE_LOCAL_URL}
       # Runtime environment detection - set to 'local' for Docker development
       - RUNTIME_ENV=local
-      - RETELL_LOCAL_WEBHOOK=${RETELL_LOCAL_WEBHOOK}
+      - RETELLAI_LOCAL_WEBHOOK=${RETELLAI_LOCAL_WEBHOOK}
+      - RETELLAI_LOCAL_AGENT_ID=${RETELLAI_LOCAL_AGENT_ID}
+      - RETELLAI_API_KEY=${RETELLAI_API_KEY}
+      - RETELLAI_PHONE_NUMBER=${RETELLAI_PHONE_NUMBER}
       - LOG_DIR=  # Disable file logging for containers
     depends_on:
       db:
