Add Ring Now button and Simulation/Real Call Mode toggle
- Add Ring Now button on patients page for immediate calls
- Add Simulation/Real Call Mode toggle with warning dialog
- Add /api/v1/calls/call-setting endpoint for mode toggle
- Update make_retell_call to support both simulation and real calls
- Add environment detection for LOCAL vs REMOTE Retell.ai config
- Remove Twilio dependencies from pyproject.toml and requirements.txt
- Add phone_number field to PatientListSchema for Ring Now functionality
- Enhance call service with proper environment variable handling
- Add comprehensive logging and error handling

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,9 +35,10 @@ faiss-cpu==1.7.4
 anthropic==0.18.1
 
 # Telephony Integration
-twilio==8.10.2
-SpeechRecognition==3.10.0
-pyttsx3==2.90
+# Removed Twilio dependencies - using Retell.ai instead
+# twilio==8.10.2
+# SpeechRecognition==3.10.0  
+# pyttsx3==2.90
 
 # AWS Integration
 boto3==1.29.3
