Add Sentry error tracking integration
- Add sentry-sdk[flask] to requirements.txt
- Create comprehensive Sentry integration module
- Configure Flask, SQLAlchemy, and logging integrations
- Add environment-specific error filtering
- Update .env.example with Sentry configuration variables
- Initialize Sentry in app factory with proper error handlers

This integration provides production error monitoring and debugging capabilities
while respecting privacy (PII filtering) and development workflow needs.

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,12 @@ OPENAI_API_KEY=YOUR_OPENAI_API_KEY
 LOG_LEVEL=INFO
 LOG_FORMAT=json
 
+# Error Tracking Configuration
+SENTRY_DSN=YOUR_SENTRY_DSN_URL
+SENTRY_TRACES_SAMPLE_RATE=0.1
+ENVIRONMENT=development
+APP_VERSION=1.0.0
+
 # Security Configuration
 AUTH_TOKEN_EXPIRY_DAYS=1
 MAX_LOGIN_ATTEMPTS=5
