--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ flask-monitoringdashboard==3.1.2
 structlog==23.2.0
 python-json-logger==2.0.7
 psutil==5.9.6
+sentry-sdk[flask]==1.38.0
 
 # Development and Testing
 pytest==7.4.3
