--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ dependencies = [
     "gunicorn>=21.2.0",
     "supervisor>=4.2.5",
     "pre-commit>=3.5.0",
+    "sentry-sdk>=2.32.0",
+    "langchain-openai>=0.3.27",
 ]
 
 [tool.black]
