--- a/requirements.txt
+++ b/requirements.txt
@@ -22,15 +22,19 @@ Flask-Limiter==3.5.0
 marshmallow==3.20.1
 Flask-Marshmallow==0.15.0
 marshmallow-sqlalchemy==0.29.0
-fhir.resources==7.0.2
+fhir.resources==7.1.0
 requests==2.31.0
 
-# RAG Model Integration
-langchain==0.0.329
-langchain_community==0.0.4
+# RAG Model Integration  
+langchain==0.3.12
+langchain_community==0.3.12
+langchain_openai==0.3.12
+langchain_text_splitters==0.3.8
 pypdf==3.17.1
-openai==1.3.7
-tiktoken==0.5.2
+python-docx==1.1.0
+unstructured==0.10.30
+openai>=1.86.0,<2.0.0
+tiktoken>=0.7,<1
 faiss-cpu==1.7.4
 anthropic==0.18.1
 
